update 1.statement.md and upload 2.statement.md

--- a/statements/1.statement.md
+++ b/statements/1.statement.md
@@ -1,23 +1,5 @@
-﻿# INDEX
-UD1: Identificación de los elementos de un programa informático
-## Actividad 01. Hello World!
-## Actividad 02. Saludo a persona
-## Actividad 03. Comentarios
-## Actividad 04. Variables 1
-## Actividad 05. Variables 2
-## Actividad 06. Variables 3
-## Actividad 07. Variables 4
-## Actividad 08. Operaciones matemáticas
-## Actividad 09. Potencia
-## Actividad 10. Resto de una división
-## Actividad 11. Conversor de días
-## Actividad 12. Conversor euros-dólares
-## Actividad 13. Definición de función 1
-## Actividad 14. Definición de función 2
-## Actividad 15. Definición de función 3
-___________________________________________
+﻿# UD1: Identificación de los elementos de un programa informático
 
-# UD1: Identificación de los elementos de un programa informático
 ## Actividad 01: Hello World!
 Escribe un script en Python que envíe un mensaje por pantalla que ponga “Hello World!”
 
